Browse page formatting so layout is more consistent. The front of the card now displays on a single line only, showing ellipsis if it overflows. Buttons are grouped together in a single cell and pushed all the way to the right. Also fixed the header formatting.

--- a/flashdown/static/compile/custom.less
+++ b/flashdown/static/compile/custom.less
@@ -104,7 +104,6 @@ footer {
     display: inline-table;
     margin: 3px auto;
   }
-
 }
 
 /* browse screen */
@@ -127,4 +126,16 @@ footer {
   }
 }
 
-
+// 
+.table-buttons-col { width: 80px; }
+table .btn { padding: 0; width: 25px; height: 20px; }
+.card-front-browse { width: 80%; }
+// align review button with header
+#review-deck { position:relative; top:15px; }
+#deck-data {
+  table-layout:fixed;
+  .ellipsis {
+      /* use the bootstrap mixin to force single line & ellipses */
+      .text-overflow;
+  }
+}
